Spring/Bank/src/main/java/com/example/demo/errors/HandleException.java
package com.example.demo.errors;

public class HandleException extends Exception {

    private static final long serialVersionUID = 1L;

    public HandleException(String message){
        super(message);
    }
}